<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <EditText
            android:id="@+id/loginEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enterLogin"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:tag="login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enterPassword"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:tag="password"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordRepetition" />

        <EditText
            android:id="@+id/passwordRepetition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enterPassword"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:tag="repPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enterName"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:tag="name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname" />

        <EditText
            android:id="@+id/surnameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enterSurname"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:tag="surname"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patronymic" />

        <EditText
            android:id="@+id/patronymicEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enterPatronymic"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:tag="patronymic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enterEmail"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:tag="email"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/phoneEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enterPhone"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:tag="phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateOfBirth" />

        <EditText
            android:id="@+id/dateEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/dateOfBirthHint"
            android:inputType="date"
            android:focusable="false"
            android:tag="date"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curator" />

        <Spinner
            android:id="@+id/curatorSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/personalDataCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personalData" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:onClick="btnRegister"/>
    </LinearLayout>

</RelativeLayout>